Fri Jul  7 02:09:16 2006  Tim Janik  <timj@gtk.org>

	* configure.in: include $BIRNET_LIBS in $SFI_LIBS, leave libz checking 
	up to birnet. 

Thu Jul  6 01:06:12 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: generate .tar.bz2 dist tarball which saves roughly 1M.

Wed Jul  5 02:55:27 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: use birnet url launcher.

	* beast-gtk/bstmain.c: invoke birnet cleanup handlers.

	* beast-gtk/gxk/gxkutils.[hc]: moved url launchers and cleanup
	handlers to birnet.

Wed Jun 21 23:42:35 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstdbmeter.c: removed unnecessary _ISOC99_SOURCE.

Wed Jun 14 15:42:17 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/gxk/gxkled.h: Remove prototype for gxk_led_set_colors
	for which no implementation exists in gxkled.c.

Thu Jun  8 18:46:32 2006  Tim Janik  <timj@gtk.org>

	* acbeast.m4: back out -Wstrict-null-sentinel again, since it doesn't
	detect 0 vs. __null.

Thu Jun  8 18:26:33 2006  Tim Janik  <timj@gtk.org>

	* acbeast.m4: add -Wstrict-null-sentinel to CXXFLAGS.

Mon Jun  5 15:33:26 2006  Tim Janik  <timj@gtk.org>

	* tools/bwtwave.cc: fix binary_lookup namespace.

	* tools/bsewavetool.cc (parse_str_option): fixed output argument passing.

Wed May 31 03:02:36 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbseutils.[hc]: added preserve_non_dirty flag to
	bst_project_restore_from_file(), adapted callers.

Wed May 31 00:39:52 2006  Tim Janik  <timj@gtk.org>

	* autogen.sh: support patching of intltool-extract.in versions >= 0.35.

	* po/intltool-scm-35.diff: version of intltool-scm.diff that applies 
	against intltool-extract.in 0.35.2.

Tue May 30 11:57:03 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/bstcanvaslink.c:
	* beast-gtk/bstcanvassource.c: Older libgnomecanvas versions had a
	bug (they don't clear their item->canvas pointers properly), for which
	a workaround was present. However, newer libgnomecanvas versions no